add player stats onto Entry View

--- a/client/templates/entries/entries.jade
+++ b/client/templates/entries/entries.jade
@@ -7,51 +7,71 @@ template(name='entryView')
             img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
             div #{ full_name }
             div #{ score }
+            each relevantStats
+              div #{ value } #{ type }
         div(class='col-xs-2')
           with RB1
             img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
             div #{ full_name }
             div #{ score }
+            each relevantStats
+              div #{ value } #{ type }
         div(class='col-xs-2')
           with RB2
             img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
             div #{ full_name }
             div #{ score }
+            each relevantStats
+              div #{ value } #{ type }
         div(class='col-xs-2')
           with WR1
             img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
             div #{ full_name }
             div #{ score }
+            each relevantStats
+              div #{ value } #{ type }
         div(class='col-xs-2')
           with WR2
             img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
             div #{ full_name }
             div #{ score }
+            each relevantStats
+              div #{ value } #{ type }
         div(class='col-xs-2')
           with WR3
             img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
             div #{ full_name }
             div #{ score }
+            each relevantStats
+              div #{ value } #{ type }
         div(class='col-xs-2')
           with FLEX1
             img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
             div #{ full_name }
             div #{ score }
+            each relevantStats
+              div #{ value } #{ type }
         div(class='col-xs-2')
           with FLEX2
             img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
             div #{ full_name }
             div #{ score }
+            each relevantStats
+              div #{ value } #{ type }
         div(class='col-xs-2')
           with TE
             img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
             div #{ full_name }
             div #{ score }
+            each relevantStats
+              div #{ value } #{ type }
         div(class='col-xs-2')
           with K
             img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
             div #{ full_name }
             div #{ score }
+            each relevantStats
+              div #{ value } #{ type }
 
 template(name='entryViewNames')
     with roster
