--- a/client/templates/administrator/fixture/fixtureCreate.jade
+++ b/client/templates/administrator/fixture/fixtureCreate.jade
@@ -31,5 +31,5 @@ template(name='fixtureCreate')
               i(class='fa fa-minus-circle pointer')
       div(class='col-xs-6')
         h4 Step 4. Create Contests
-        div(class='btn btn-sm btn-default create-fixture')
+        div(class='btn btn-sm btn-default')
           a(href="{{pathFor 'contestCreateLayout' }}") Create Contests!
