--- a/client/templates/contests/draftTeam/contests.jade
+++ b/client/templates/contests/draftTeam/contests.jade
@@ -73,14 +73,15 @@ template(name='contestLineupContainer')
           div(class='col-xs-24')
             each currentLineup
               if espn_id
-                div(class='row lineup-player-selection size-13')
-                  div(class='col-xs-4 lineup-player-image vAlign')
-                    img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
-                  div(class='col-xs-2 lineup-player-position vAlign') #{position}
-                  div(class='col-xs-8 lineup-player-name vAlign') #{full_name}
-                  div(class='col-xs-2 lineup-player-salary vAlign') $4,500
-                  div(class='col-xs-2 col-xs-push-2 lineup-player-remove vAlign')
-                    i(class="fa fa-minus-circle fa-2x pointer")
+                +AnimateWithVelocity
+                  div(class='row lineup-player-selection size-13')
+                    div(class='col-xs-4 lineup-player-image vAlign' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
+                      img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
+                    div(class='col-xs-2 lineup-player-position vAlign') #{position}
+                    div(class='col-xs-8 lineup-player-name vAlign') #{full_name}
+                    div(class='col-xs-2 lineup-player-salary vAlign') $4,500
+                    div(class='col-xs-2 col-xs-push-2 lineup-player-remove vAlign')
+                      i(class="fa fa-minus-circle fa-2x pointer")
               else
                 div(class='row lineup-player-selection player-empty size-13')
                   div(class='col-xs-4 lineup-player-image vAlign')
