--- a/client/templates/entries/entries.jade
+++ b/client/templates/entries/entries.jade
@@ -4,12 +4,13 @@ template(name='entryView')
       h2 {{ formatScore totalScore }}
     div(class='row')
       each roster
-        div(class='col-xs-2')
-          img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
-          div #{ last_name }, #{ first_name }
-          div #{ score }
-          each relevantStats
-            div #{ value } #{ type }
+        +AnimateWithVelocity
+          div(class='col-xs-2' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
+            img(src="{{playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
+            div #{ last_name }, #{ first_name }
+            div #{ score }
+            each relevantStats
+              div #{ value } #{ type }
 template(name='entryViewNames')
     each roster
       div #{last_name}
