--- a/client/templates/layouts/navLayout/navLayout.sass
+++ b/client/templates/layouts/navLayout/navLayout.sass
@@ -53,6 +53,13 @@ $progressbar-color: $highlightGreen
 .navbar-header, .navbar-collapse
   background-color: $navbarDarkGray
 
+.nav.nav-tabs li
+  background-color: white
+
+  border: 1px solid $highlightGreen
+  border-bottom: 0px
+  border-radius: 4px
+
 .nav li
   background-color: $navbarDarkGray
 
