--- a/client/templates/contests/draftTeam/contests.jade
+++ b/client/templates/contests/draftTeam/contests.jade
@@ -53,7 +53,7 @@ template(name='contestLineupContainer')
                 div(class='col-xs-3 player-fppg vAlign') 12.3
                 div(class='col-xs-3 player-played vAlign') 13
                 div(class='col-xs-5 player-fixture vAlign') {{ getCurrentEvent ..}}
-                div(class='col-xs-2 player-salary vAlign') $4,500
+                div(class='col-xs-2 player-salary vAlign') ${{ addCommas salary }}
                 if inCurrentLineup
                   div(class='col-xs-2 col-xs-push-1 lineup-player-remove vAlign')
                     i(class="fa fa-minus-circle fa-2x pointer")
@@ -79,7 +79,7 @@ template(name='contestLineupContainer')
                       img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
                     div(class='col-xs-2 lineup-player-position vAlign') #{position}
                     div(class='col-xs-8 lineup-player-name vAlign') #{full_name}
-                    div(class='col-xs-2 lineup-player-salary vAlign') $4,500
+                    div(class='col-xs-2 lineup-player-salary vAlign') ${{addCommas salary}}
                     div(class='col-xs-2 col-xs-push-2 lineup-player-remove vAlign')
                       i(class="fa fa-minus-circle fa-2x pointer")
               else
