add growl notifications for contest add errors

--- a/client/templates/contests/draftTeam/contests.sass
+++ b/client/templates/contests/draftTeam/contests.sass
@@ -64,6 +64,10 @@ $lightBlue: #3f96cb
     &:last-child
       border-bottom: 0px
 
+  .player-photo
+    height: 40px
+    width: 54px
+
 .lineup-table
   border: 1px solid $lightGrey
   border-radius: 5px
@@ -100,3 +104,5 @@ $lightBlue: #3f96cb
   .btn.btn-default.btn-lg.contest-entry
     padding: 12px 30px
 
+.lineup-desc
+  margin-bottom: 10px
