--- a/client/templates/contests/draftTeam/contests.jade
+++ b/client/templates/contests/draftTeam/contests.jade
@@ -2,18 +2,22 @@ template(name='contestTitle')
   div(class='col-xs-24')
     div(class='row')
       h1(id='contest-title' class='col-xs-16') #{contestName}
-      h3(id='contest-date' class='col-xs-8') Contest Starts this {{momentify startsAt}}
+      h4(id='contest-date' class='col-xs-8') Contest Starts this {{momentify startsAt}}
     div(class='row')
-      h4(id='contest-information' class='col-xs-24') Entries: #{entryCount} / #{entrySize}   Entry Fee: $#{entryFee}   Prize: $#{prizes} #{prizeFormat}
+      h4(id='contest-information' class='col-xs-24 size-12') Entries: #{entryCount} / #{entrySize}   Entry Fee: $#{entryFee}   Prize: $#{prizes} #{prizeFormat}
 
 template(name='contestFixtureContainer')
   div(class='col-xs-24' id='event-filters-container')
     div(class='row event-filters size-13 pointer')
       div(class='col-xs-2 event-filter-tab')
-          div(class='event-filter') All
+        div(class='event-filter') 
+          div(class='vAlign') All
       each fixture.events
         div(class='col-xs-2 event-filter-tab')
-          div(class='event-filter') #{away} @ #{home} {{momentify startsAt 'shortTime'}}
+          div(class='event-filter') 
+            div #{away} 
+            div @ #{home} 
+            div(class='size-10') {{momentify startsAt 'shortTime'}}
 
 template(name='contestLineupContainer')
   div(class='contestLineupContainer col-xs-24')
@@ -38,9 +42,10 @@ template(name='contestLineupContainer')
           div(class='col-xs-6 col-xs-push-4 position-filter-tab')
             div(class='position-filter vAlign') Player search...
         div(class='row player-list-table-header size-12')
-          div(class='col-xs-8 player-list-table-title vAlign') Name
-          div(class='col-xs-3 player-list-table-title vAlign') FPPG
-          div(class='col-xs-3 player-list-table-title vAlign') Played
+          div(class='col-xs-4 player-list-table-title vAlign') Pos
+          div(class='col-xs-6 player-list-table-title vAlign') Name
+          div(class='col-xs-2 player-list-table-title vAlign') FPPG
+          div(class='col-xs-2 player-list-table-title vAlign') Played
           div(class='col-xs-5 player-list-table-title vAlign') Game
           div(class='col-xs-2 player-list-table-title vAlign') Salary
           div(class='col-xs-2 player-list-table-title vAlign')
@@ -48,10 +53,12 @@ template(name='contestLineupContainer')
           div(id='player-list-table' class='col-xs-24')
             each availablePlayers
               div(class='row player-list-item size-13 {{#if inCurrentLineup}}selected-player{{/if}}')
-                div(class='col-xs-2 player-position vAlign') #{position}
+                div(class='col-xs-1 player-position vAlign') #{position}
+                div(class='col-xs-3 player-image vAlign')
+                  img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
                 div(class='col-xs-6 player-name vAlign') #{full_name}
-                div(class='col-xs-3 player-fppg vAlign') 12.3
-                div(class='col-xs-3 player-played vAlign') 13
+                div(class='col-xs-2 player-fppg vAlign') 12.3
+                div(class='col-xs-2 player-played vAlign') 13
                 div(class='col-xs-5 player-fixture vAlign') {{ getCurrentEvent ..}}
                 div(class='col-xs-2 player-salary vAlign') ${{ addCommas salary }}
                 if inCurrentLineup
@@ -63,12 +70,17 @@ template(name='contestLineupContainer')
       div(class='col-xs-10 col-xs-push-1')
         div(class='row')
           div(class='col-xs-10')
-            h2 Your Lineup
+            h3 Your Lineup
           div(class='col-xs-2')
           div(class='col-xs-6')
-            h2 $#{salaryRemaining}
+            h3 $#{salaryRemaining}
           div(class='col-xs-6')
-            h2 $#{salaryRemainingAvg}
+            h3 $#{salaryRemainingAvg}
+        div(class='row size-10 lineup-desc')
+          div(class='col-xs-10') Lineup locks @ {{momentify startsAt}}
+          div(class='col-xs-2')
+          div(class='col-xs-6') Salary Remaining
+          div(class='col-xs-6') Avg/Player
         div(class='row lineup-table')
           div(class='col-xs-24')
             each currentLineup
@@ -76,7 +88,7 @@ template(name='contestLineupContainer')
                 +AnimateWithVelocity
                   div(class='row lineup-player-selection size-13')
                     div(class='col-xs-4 lineup-player-image vAlign' data-animate data-property="opacity" data-duration="1000" data-from-value="0" data-to-value="1")
-                      img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
+                      img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'small'}}")
                     div(class='col-xs-2 lineup-player-position vAlign') #{position}
                     div(class='col-xs-8 lineup-player-name vAlign') #{full_name}
                     div(class='col-xs-2 lineup-player-salary vAlign') ${{addCommas salary}}
