add header image and convert some templates to jade

--- a/client/templates/contests/draftTeam/contests.sass
+++ b/client/templates/contests/draftTeam/contests.sass
@@ -9,6 +9,7 @@ $lightBlue: #3f96cb
 .contestLineupContainer
   .player-list-item
     height: 45px
+    background-image: url("/images/player_purple_pink.svg")
 
     &.selected-player
       background-color: #f2fbe9
