--- a/client/templates/layouts/navLayout/navLayout.jade
+++ b/client/templates/layouts/navLayout/navLayout.jade
@@ -1,7 +1,8 @@
 template(name='navLayout')
   div(id='nav-container')
     +nav
-    
+  
+  div(class='headerBar')
   div(id='globalContainer' class='row container-fluid')
     +yield
 
