--- a/client/templates/lobby/contestFilterContainer.html
+++ b/client/templates/lobby/contestFilterContainer.html
@@ -1,7 +1,7 @@
 <template name='contestFilterContainer'>
   <div id='contestFilterContainer' class='col-xs-24'>
     <div class='contestFilter'>
-      <div class='row headspace-50 greyBg'>
+      <div class='row greyBg'>
         <div class='col-xs-8 rBorder primaryBorderColor solidBorder'>
           <div class='row contestFilterRow'>
             <div class='col-xs-7 vAlign'><h5 class='center whiteText'>SPORT</h5></div>
@@ -13,6 +13,7 @@
                 <div class='col-xs-8 whiteText'>NFL</div>
                 <div class='col-xs-8 whiteText'>NBA</div>
                 <div class='col-xs-8 whiteText'>NHL</div>
+                <div class='col-xs-8 whiteText'>MLB</div>
               </div>
             </div>
           </div>
