neon-ize and bootstrap sassify the site

--- a/client/lib/stylesheets/custom.bootstrap.import.less
+++ b/client/lib/stylesheets/custom.bootstrap.import.less
@@ -29,6 +29,9 @@
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
+@neon-green: #b0ff82;
+@forest-green: #248a70;
+@just-right-green: #85e175;
 
 //== Scaffolding
 //
@@ -154,9 +157,9 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              white;
-@btn-default-bg:                 #8ccc3e; // fduel green
-@btn-default-border:             #65ae15; // fduel green
-@btn-default-bg-hover:           #98d152; // fduel green
+@btn-default-bg:                 @forest-green;
+@btn-default-border:             @neon-green; 
+@btn-default-bg-hover:           @just-right-green;
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-primary;
