--- a/client/lib/stylesheets/fonts.sass
+++ b/client/lib/stylesheets/fonts.sass
@@ -1,3 +1,11 @@
 @font-face
   font-family: 'jersey'
   src: url('/fonts/jersey.ttf')
+
+body
+  font-smoothing: antialiased
+  -webkit-webkit-font-smoothing: antialiased
+  -moz-webkit-font-smoothing: antialiased
+  -ms-webkit-font-smoothing: antialiased
+  -o-webkit-font-smoothing: antialiased
+  webkit-font-smoothing: antialiased
