--- a/client/templates/administrator/fixture/fixtureCreate.sass
+++ b/client/templates/administrator/fixture/fixtureCreate.sass
@@ -1,4 +1,4 @@
-$highlightGreen: #7ab800
+@import "../../../lib/stylesheets/colors.sass"
 
 .fixture-item:hover
-	border: 1px solid $highlightGreen
+	border: 1px solid $accent-highlight
