--- a/client/templates/layouts/lobby/lobbyLayout.jade
+++ b/client/templates/layouts/lobby/lobbyLayout.jade
@@ -6,7 +6,7 @@ template(name='lobbyLayout')
       div(class='row') 
         +lobbyFilters
       div(class='row') 
-        +contestResultsContainer
+        +contestItems
       div(class='row lobbyFooter') 
         +contestLegend
       div(class='row footerPre') 
