--- a/client/templates/lobby/lobbyFilters.jade
+++ b/client/templates/lobby/lobbyFilters.jade
@@ -3,9 +3,9 @@ template(name='lobbyFilters')
     div(class='contestFilter')
       div(class='row greyBg')
         div(class='col-xs-8 rBorder primaryBorderColor solidBorder')
-          div(class='row contestFilterRow')
+          div(class='row lobbyFilterRow')
             div(class='col-xs-7 vAlign')
-              h5(class='center whiteText') SPORT
+              h6(class='center whiteText') SPORT
             div(class='col-xs-16 vAlign')
               div(class='row')
                 div(class='col-xs-24 whiteText') ALL
@@ -15,11 +15,11 @@ template(name='lobbyFilters')
                 div(class='col-xs-8 whiteText') NHL
                 div(class='col-xs-8 whiteText') MLB
         div(class='col-xs-8 rBorder primaryBorderColor solidBorder')
-          div(class='row contestFilterRow')
+          div(class='row lobbyFilterRow')
             div(class='col-xs-7 vAlign')
               h6(class='center whiteText') ENTRY        
         div(class='col-xs-8')
-          div(class='row contestFilterRow')
+          div(class='row lobbyFilterRow')
             div(class='col-xs-7 vAlign')
-              h5(class='center whiteText') MAX PLAYERS
+              h6(class='center whiteText') MAX PLAYERS
             div(class='col-xs-16 vAlign')
