--- a/client/templates/lobby/contestItems.jade
+++ b/client/templates/lobby/contestItems.jade
@@ -1,19 +1,18 @@
-template(name="contestResultsContainer")
+template(name="contestItems")
   div(id="contestResultsContainer" class='col-xs-24')
     div(class="row")
       div(id='contestResultsTableContainer' class='col-xs-24')
         div(id='contestResultsTableHeader' class='row sysLabelText paddingTB-10 size-12')
-          div(class='col-xs-7') Contest
-          div(class='col-xs-2') Entries
-          div(class='col-xs-2') Size
-          div(class='col-xs-2') Entry
+          div(class='col-xs-8') Contest
           div(class='col-xs-2') Prizes
+          div(class='col-xs-2') Entries
+          div(class='col-xs-1') Entry
           div(class='col-xs-4') Starts (ET)
         div(class='row')
           div(id='contestResultsTable' class='col-xs-24')
             div(class='contestScrollableContainer')
               div(class='row contestResultsBlankItem')
               +each contests
-                +contestResultsItem
-                +contestDetailsModal
+                +contestItem
+                +contestModal
               //- TODO: Refactor out this modal duplication
