add fullscreen imagery and inner white section

--- a/client/templates/contests/draftTeam/contests.sass
+++ b/client/templates/contests/draftTeam/contests.sass
@@ -41,7 +41,7 @@ $lightBlue: #3f96cb
     font-size: 22px
 
 .fa-minus-circle
-  color: $highlightRed
+  color: $fa-minus
   font-size: 22px
 
 .player-list-table-header
