--- a/client/templates/lobby/lobby.sass
+++ b/client/templates/lobby/lobby.sass
@@ -9,7 +9,8 @@
   cursor: pointer
 
 #contestResultsTable
-  height: 500px // set a fixed height so the custom scrollbar takes effect
+  height: 800px // set a fixed height so the custom scrollbar takes effect
+  background-color: white
 
 .contestIcons
   border-radius: 3px
