--- a/client/lib/stylesheets/colors.sass
+++ b/client/lib/stylesheets/colors.sass
@@ -1,6 +1,7 @@
 // base colors 
 $baby-blue: #3f96cb
 $orange-julius: #FFBC74
+$highlight-red: #e22b00
 
 // complementary trifectas
 $neon-green: #b0ff82
@@ -10,3 +11,5 @@ $just-right-green: #85e175
 // variables
 $accent-highlight: $neon-green
 $accent-foil: $orange-julius
+
+$fa-minus: $highlight-red
