--- a/client/templates/layouts/navLayout/navLayout.sass
+++ b/client/templates/layouts/navLayout/navLayout.sass
@@ -58,7 +58,6 @@ $navHighlightHeight: 3px
 
 .nav.nav-tabs li
   background-color: white
-
   border: 1px solid $accent-highlight
   border-bottom: 0px
   border-radius: 4px
@@ -89,12 +88,14 @@ $navHighlightHeight: 3px
     &.active
       border-top: $navHighlightHeight solid $accent-highlight
       color: $accent-foil
+      font-weight: 600
       transition: all 1s ease-in-out
       padding-top: 15px - $navHighlightHeight
 
     &:hover
       border-top: $navHighlightHeight solid $accent-foil
       color: $accent-foil
+      font-weight: 600
       transition: all .25s ease-in-out
       padding-top: 15px - $navHighlightHeight
 
@@ -122,10 +123,26 @@ $navHighlightHeight: 3px
 .headerBar
   width: 100%
   height: 120px
-  margin-bottom: 15px
+  margin-bottom: 70px
   background-image: url("/images/triangle_green.svg")
 
+#footerContainer
+  width: 100%
+  height: 240px
+  background-image: url("/images/triangle_green.svg")
+
+.spacer
+  width: 100%
+  height: 50px
+
 #globalContainer
-  width: 95%
+  width: 1024px
+  background-color: white
   margin: auto
-  
+  padding: 15px 15px 50px 15px
+
+.wrapper
+  width: 100%
+  background-image: url('/images/stadium_streaming_light_1440.png')
+  background-repeat: no-repeat
+  background-size: cover
